[update] slightly better results

--- a/training/train3.ipynb
+++ b/training/train3.ipynb
@@ -1661,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "0fff591c",
    "metadata": {},
    "outputs": [
@@ -1681,6 +1681,15 @@
     "\n",
     "date_test = df['Date'].iloc[split_index:]\n",
     "\n",
+    "y_scaled = scaler_y.fit_transform(y.values.reshape(-1, 1))\n",
+    "\n",
+    "# Predict (model.predict gives scaled values)\n",
+    "y_pred_scaled = xgb.predict(X_test)\n",
+    "\n",
+    "# Inverse transform\n",
+    "y_pred = scaler_y.inverse_transform(y_pred_scaled.reshape(-1, 1)).ravel()\n",
+    "y_true = scaler_y.inverse_transform(y_test.values.reshape(-1, 1)).ravel()\n",
+    "\n",
     "plt.figure(figsize=(12, 6))\n",
     "plt.plot(date_test, y_test, label='Real values', color='blue')\n",
     "plt.plot(date_test, y_pred, label='Predicted values', color='orange')\n",
@@ -1696,8 +1705,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "96debd5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../models/model3.pkl']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path = r'../models/model3.pkl'\n",
+    "\n",
+    "joblib.dump(xgb, path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea4d100c",
    "metadata": {},
    "outputs": [],
    "source": []
